# iwe

./: .env.showcase  .gitignore  pyproject.toml  stripe_mock_payment_methods.txt  wtf.txt
data/seeds/dishes/burgers/: CAUTION.md  baba_yagas_necro_crunch_mega_burger.json  cybernetic_demon_burger.json  holy_virgin_burger_royale.json  psychic_clown_double_burger.json  sacrificial_virgin_double_burger.json
data/seeds/ingredients/: buns.csv  cheese_and_sauces.csv  esoteric_and_quantum.csv  mean_and_base.csv  radioactive_and_toxic.csv
deploy/alembic/: alembic.ini
seeds/dishes/burgers/: baba_yagas_necro_crunch_mega_burger.json  cybernetic_demon_burger.json  holy_virgin_burger_royale.json  popes_holy_singularity_burger_royale.json  psychic_clown_double_burger.json  quantum_shrödingers_glitch_burger.json  sacrificial_virgin_double_burger.json
src/: docs.py  main.py
src/components/: __init__.py
src/components/billing/: __init__.py  bind_seti_id.py  create_request.py  create_topup_request.py  generate_link.py  generate_seti_id.py  handlers.py  repository.py  routes.py  webhooks.py
src/components/identity/: __init__.py  register.py  repository.py
src/core/: dependencies.py  env_conf.py  exceptions.py  lifespan.py  lifespan_helpers.py
src/infra/persistence/: postgres.py
src/infra/persistence/alembic/: commands.md
src/infra/persistence/models/: enums.py  mixins.py  schema.py
src/iwe/: main.py
src/iwe/components/billing/: __init__.py  bind_seti_id.py  create_topup_request.py  set_default_card.py
src/iwe/shared/postgres/: check_constraints.py  manager.py  schema.py
src/iwe/shared/postgres/alembic/versions/: 2026_07_21_1951-8265c0846343_initial.py  2026_07_21_2256-405fdff7f400_initial.py  2026_07_23_1952-bf939f29db61_initial.py
src/modules/identity/: routes.py
src/seeding/: dcl_statements.py  ddl_statements.py  dishes_and_ingredients.py  dml_statements.py
src/shared/postgres/: enums.py  manager.py  mixins.py  schema.py
src/shared/postgres/alembic/: cheatsheet.md  env.py
src/shared/postgres/alembic/versions/: 2026_07_05_1006-5ecfad0a3318_initial.py  2026_07_05_1656-e714db4ac3ce_initial.py  2026_07_08_1753-7bd437caabbd_initial.py
src/shared/postgres/models/: schema.py
tests/billing/: ctr_dynamic_key.js  ctr_static_key.js
