# activate uv w/ .venv\Scripts\activate (am OOM tho)
[project]
name = "IwannaEat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "granian>=2.7.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "stripe>=15.3.0",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "uvicorn>=0.49.0",
]

[tool.uv]  # ball idk, ensure correct environment
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.ruff]  #  uv run ruff check .
fix = false
line-length = 90
exclude = ["alembic", "templates", "*.html", "*.jinja2"]
lint.select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "I",   # Isort
    "UP",  # Pyupgrade
    "N",   # PEP8 naming
    "B",   # Bugbear
    "C4",  # Comprehensions
    "RUF", # Ruff-specific
    "A",   # Builtins
    "ASYNC", # Flake8-async
    "S",   # Security
    "T10", # Debugger
    "EM",  # Error messages
    "YTT", # Python 3.10+ features
    "PL",  # Pylint
    "W",  # Pycodestyle warnings

]

[tool.ruff.lint.isort]
known-first-party = ["IwannaEat"]  # name of the project

[tool.ruff.format]
quote-style = "double"  # "" instead ''
indent-style = "space"  # spaces instead of tabs
line-ending = "auto"  # auto detect LF (Unix) or CRLF (Windows)

[tool.ruff.lint.flake8-quotes]
# "" everywhere allez
avoid-escape = true
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = [
    "F401",  # unused import
    "E402",  # module import not at top of file
    "N802",  # function name should be lowercase
    "N806",  # variable in function should be lowercase
]
"tests/*.py" = [
    "S101",    # use of assert
    "PLR2004", # magic value
    "ARG001",  # unused argument
]
