# activate uv w/ .venv\Scripts\activate (am OOM tho)
# clean ts --> uv cache clean; Remove-Item -Recurse -Force .venv; uv sync

[project]
name = "iwe"
version = "0.1.0"
description = "RDBMS maxxing for a highload FoodTech"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "stripe>=15.3.0",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",  # uv run ruff check . --fix
    # uvx ruff format .
    "ty>=0.0.58",  # uvx ty check .
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv]  # ball idk, ensure correct environment
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.ty.src]
include = ["src/iwe"]
exclude = [".venv", "deploy/alembic"]

[tool.ruff]
fix = false
line-length = 90
exclude = ["alembic", "assets", "*.html", "*.jinja2"]
lint.select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "I",   # Isort
    "UP",  # Pyupgrade
    "N",   # PEP8 naming
    "B",   # Bugbear
    "C4",  # Comprehensions
    "RUF", # Ruff-specific
    "A",   # Builtins
    "ASYNC", # Flake8-async
    "S",   # Security
    "T10", # Debugger
    "EM",  # Error messages
    "YTT", # Python 3.10+ features
    "PL",  # Pylint
    "W",  # Pycodestyle warnings
    "TID", # Flake8-tidy-imports
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
known-first-party = ["iwe"]  # name of the project

[tool.ruff.format]
quote-style = "double"  # "" instead ''
indent-style = "space"  # spaces instead of tabs
line-ending = "auto"  # auto detect LF (Unix) or CRLF (Windows)

[tool.ruff.lint.flake8-quotes]
# "" everywhere allez
avoid-escape = true
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = [
    "F401",  # unused import
    "E402",  # module import not at top of file
    "N802",  # function name should be lowercase
    "N806",  # variable in function should be lowercase
]
"tests/*.py" = [
    "S101",    # use of assert
    "PLR2004", # magic value
    "ARG001",  # unused argument
]
